@@ -1,3 +1,7 @@
+2007-11-09  Robert Ancell  <robert.ancell@gmail.com>
+
+	* Put an asterisk in the title bar for games that need saving (Bug #494847)
+
 2007-11-08  Robert Ancell  <robert.ancell@gmail.com>
 
 	* lib/main.py: If no game on startup start default game of human vs AI (Bug #446950)
